--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,91 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap");
-h1 {
+/*Global Variables*/
+/*Typography*/
+body {
   font-family: "Montserrat", sans-serif;
-  font-size: 44px;
-  line-height: 45px;
-  color: red;
+}
+
+/*bootstrap clasess rest */
+.container-fluid {
+  padding: 0 60px;
+}
+
+/* Header */
+.main-header {
+  background-color: #181818;
+  padding: 25px 0;
+}
+.main-header--nav-menu ul {
+  padding-left: 0;
+  list-style: none;
+}
+.main-header--nav-menu ul li {
+  display: inline-block;
+}
+.main-header--nav-menu ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+/* Home first section */
+#home-top {
+  background: #181818;
+  position: relative;
+}
+#home-top .card-wrapper {
+  min-height: 900px;
+  background-image: url("../../img/home-bg2.png");
+  background-position: center left;
+  background-size: cover;
+  border-radius: 50px;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: stretch;
+}
+#home-top .card-wrapper--textbox {
+  display: flex;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+#home-top .card-wrapper--img {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+#home-bottom {
+  position: relative;
+}
+#home-bottom .bottom-text {
+  text-align: center;
+}
+
+/*Cities slider*/
+#cities-slider .cities-slider--city--top {
+  min-height: 670px;
+  background-image: url("../../img/slider-new-york.png");
+  background-position: center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+}
+#cities-slider .cities-slider--city--bottom {
+  background-color: #181818;
+  color: #fff;
+  padding-top: 100px;
+}
+#cities-slider .cities-slider--city--bottom .cities-slider--city--bottom__card {
+  background-color: #262a2b;
+  border-radius: 50px;
+  text-align: center;
+  padding-top: 50px;
+  padding-left: 40px;
+}
+
+#cities-footer {
+  text-align: center;
+  padding-top: 150px;
+  padding-bottom: 80px;
 }
 
 /*# sourceMappingURL=styles.css.map */
