--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,6 @@ body {
 /*Cities slider*/
 #cities-slider .cities-slider--city--top {
   min-height: 670px;
-  background-image: url("../../img/slider-new-york.png");
   background-position: center;
   background-size: cover;
   display: flex;
@@ -81,8 +80,41 @@ body {
   padding-top: 50px;
   padding-left: 40px;
 }
+#cities-slider .cities-slider--city .city--new-york {
+  background-image: url("../../img/slider-new-york.png");
+}
+#cities-slider .cities-slider--city .city--miami {
+  background-image: url("../../img/slider-miami.png");
+}
+#cities-slider .cities-slider--city .city--madrid {
+  background-image: url("../../img/slider-madrid.png");
+}
+#cities-slider .cities-slider--city .city--others {
+  background-image: url("../../img/slider-others.png");
+}
 
-#cities-footer {
+#travel #travel--top {
+  background-color: #181818;
+}
+#travel #travel--top .travel-banner {
+  min-height: 720px;
+  background-image: url("../../img/travel-banner.png");
+  background-position: center;
+  background-size: cover;
+  border-radius: 50px;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: stretch;
+}
+#travel #travel--top .travel-banner--box {
+  display: flex;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 50%;
+}
+
+#footer {
   text-align: center;
   padding-top: 150px;
   padding-bottom: 80px;
